# proof-of-source

./: .gitignore  Cargo.toml  README.md  proof.sh
chain/: Cargo.toml
chain/src/: blockchain.rs
contract/: Cargo.toml
contract/src/: lib.rs
contracts/erc20/: Cargo.toml
contracts/erc20/src/: lib.rs
contracts/erc20/wit/: erc20.wit
proof/: Cargo.toml
proof/src/: main.rs
runtime/: Cargo.toml
runtime/src/: compile.rs  error.rs  lib.rs
